# NetSim-project

./: .gitignore  CMakeLists.txt  README.md  nodes.cpp  nodes.hpp
include/: helpers.cpp  helpers.hpp  nodes.cpp  nodes.hpp  package.hpp  storage_types.hpp  types.hpp
mocks/: nodes_mocks.hpp
src/: nodes.cpp  package.cpp  package_test.cpp  storage_types.cpp
test/: main_gtest.cpp  package_test.cpp
